--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,6 +20,7 @@ workflows:
   run-tests:
     jobs:
       - start-server
+      # TODO: Add a new job to run the component tests
       - cypress/run:
-          name: run-component-tests
-          cypress-command: npx cypress run --component
+        name: run-component-tests
+        cypress-command: npx cypress run --component
